fix remove cell not detect bug

--- a/mapping/data_notebook/new.ipynb
+++ b/mapping/data_notebook/new.ipynb
@@ -83,6 +83,13 @@
     "a = 10\n",
     "b = 30"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Test"
+   ]
   }
  ],
  "metadata": {
