--- a/mapping/data_notebook/old.ipynb
+++ b/mapping/data_notebook/old.ipynb
@@ -85,9 +85,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.8.5 64-bit",
+   "display_name": "Python 3.7.3 64-bit (conda)",
    "language": "python",
-   "name": "python38564bit457ff986178c4546bb23265a1961e673"
+   "name": "python373jvsc74a57bd026aced9087ca3252615d7b2b68d663dbfc8bde838324aae8750182dc55b67b79"
   },
   "language_info": {
    "codemirror_mode": {
@@ -99,7 +99,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
